# Tiny-Pitch-Analyzers

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
My analysis/: 2 detail.md  4 detail.md  New Plan.md
My analysis/Old large/: 1 Main.md  3 detail.md  4 optimization.md  5 detail.md  6 implementation stack.md
My analysis/combined/: Combined.txt
Source/App/: CpuVisualizerHost.cpp  CpuVisualizerHost.h  IRendererHost.h  LegacyGLBatcher.cpp  LegacyGLBatcher.h  Main.cpp  MainComponent.cpp  MainComponent.h  OpenGLVisualizerHost.cpp  OpenGLVisualizerHost.h  RendererBackendPolicy.h  SharedWaterfallRing.cpp  SharedWaterfallRing.h  VisualizationMode.h  WaveformSnapshotFeed.h
Source/Engine/: AgcInt16.cpp  AgcInt16.h  AnalysisModelIds.h  ChromaFolder.cpp  ChromaFolder.h  ChromaMap.cpp  ChromaMap.h  ChromaPostProcess.cpp  ChromaPostProcess.h  CircularInt16Buffer.cpp  CircularInt16Buffer.h  Decimator4x.cpp  Decimator4x.h  EngineState.cpp  EngineState.h  FftMagnitudes.cpp  FftMagnitudes.h  FloatIngress.cpp  FloatIngress.h  MultiResSpectrumStitch.cpp  MultiResSpectrumStitch.h  PitchFromSpectrum.cpp  PitchFromSpectrum.h  PitchLabChord.cpp  PitchLabChord.h  PitchLabEngine.cpp  PitchLabEngine.h  PitchLabOptimizations.h  PitchPeak.h  PolyphonicPeakPicker.cpp  PolyphonicPeakPicker.h  PreEmphasis.h  RenderFrameData.cpp  RenderFrameData.h  SpectralMagSmear.cpp  SpectralMagSmear.h  StaticTables.cpp  StaticTables.h  WaterfallFreqAxis.h  WaterfallPeakRow.cpp  (+3 more)
Source/Tools/VizExport/: VizCpuRenderer.cpp  VizCpuRenderer.h  WaterfallMapping.h  main.cpp
Tests/: CMakeLists.txt  smoke_engine.cpp  test_agc.cpp  test_chord.cpp  test_chroma_folder.cpp  test_chroma_map.cpp  test_chroma_post.cpp  test_chroma_waterfall_shading.cpp  test_circular_buffer.cpp  test_copy_latest.cpp  test_decimator.cpp  test_engine_state.cpp  test_fft_chroma.cpp  test_float_ingress.cpp  test_multi_res_ingress.cpp  test_multires_engine_smoke.cpp  test_null_pipeline.cpp  test_offline_hop.cpp  test_optimizations.cpp  test_pitch_from_spectrum.cpp  test_pitch_lab_engine.cpp  test_polyphonic_picker.cpp  test_pre_emphasis.cpp  test_render_frame_snapshot.cpp  test_renderer_backend_policy.cpp  test_shared_waterfall_ring.cpp  test_spectral_mag_smear.cpp  test_spectrum_stitching.cpp  test_static_tables.cpp  test_viz_export_smoke.cpp  test_waterfall_direction.cpp  test_waterfall_peak_row.cpp  test_window_q24.cpp
docs/: AI_AGENT.md  ARCHITECTURE.md  BUILD.md  Rendering Architecture.md  TESTING.md  VIZ_EXPORT.md
test-assets/: README.md
